--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "backend": "file:",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5"
