--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.2.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
