Add the generation of cheque

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,9 @@
     "express-validator": "^7.2.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "number-to-words": "^1.2.4",
+    "numero-a-letras": "^1.0.6",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.16.0",
     "sequelize": "^6.37.5"
   },
