Fix nixpacks.toml file

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,5 +4,5 @@ nixPkgs = ["nodejs"]
 [phases.build]
 cmds = ["cd backend && npm install"]
 
-[start]
-cmd = "cd backend && npm start"
+[phases.start]
+cmds = ["cd backend && npm start"]
