--- a/railway.toml
+++ b/railway.toml
@@ -1,3 +1,3 @@
 [service]
-build = "cd backend && npm install"
-start = "cd backend && node app.js"
+build = "cd .. && cd backend && npm install"
+start = "cd .. && cd backend && npm start"
