Fix nixpacks file

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs"]
 
 [phases.build]
-cmds = ["cd backend && npm install"]
+cmds = ["cd ./backend && npm install"]
 
 [phases.start]
-cmds = ["cd backend && npm start"]
+cmds = ["cd ./backend && npm start"]
