--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -3,21 +3,22 @@
     "username": "root",
     "password": "simbaEva4367",
     "database": "sge_app",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "simbaEva4367",
     "database": "sge_app",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "simbaEva4367",
+    "password": "DQDgVfJSXKqyoAaBiIuKdLVVkDikliNh",
     "database": "sge_app",
-    "host": "127.0.0.1",
+    "host": "shuttle.proxy.rlwy.net",
+    "port": 31229,
     "dialect": "mysql"
   }
 }
