--- a/frontend/sge-app/Dockerfile
+++ b/frontend/sge-app/Dockerfile
@@ -20,7 +20,7 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copia los archivos construidos al directorio de Nginx
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
 # Expone el puerto donde corre el frontend
 EXPOSE 80
