--- a/frontend/sge-app/nginx.conf
+++ b/frontend/sge-app/nginx.conf
@@ -1,13 +1,17 @@
 server {
-    listen 80;
+    listen $PORT; # Railway asigna un puerto dinámico
     server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
-
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri /index.html;
     }
 
-    error_page 404 /index.html;
+    location /api/ {
+        proxy_pass http://backend:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
