--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,10 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "simbaEva4367",
-    "database": "sge_app",
-    "host": "localhost",
-    "dialect": "mysql"
+    "password": "DQDgVfJSXKqyoAaBiIuKdLVVkDikliNh",
+    "database": "railway",
+    "host": "shuttle.proxy.rlwy.net",
+    "port": 31229,
+    "dialect": "mysql",
+    "dialectOptions": {
+      "connectTimeout": 60000
+    }
   },
   "test": {
     "username": "root",
