--- a/frontend/sge-app/nginx.conf
+++ b/frontend/sge-app/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen $PORT; # Railway asigna un puerto dinámico
-    server_name localhost;
+    server_name _;
 
     location / {
         root /usr/share/nginx/html;
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3000/;
+        proxy_pass https://sge-app-production.up.railway.app/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
