--- a/frontend/sge-app/nginx.conf
+++ b/frontend/sge-app/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://sge-app-production.up.railway.app/;
+        proxy_pass https://sge-app-production.up.railway.app/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
