--- a/frontend/sge-app/package.json
+++ b/frontend/sge-app/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "echo 'Frontend served with Nginx'",
+    "start": "serve -s build -l 80",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
