--- a/frontend/sge-app/Dockerfile
+++ b/frontend/sge-app/Dockerfile
@@ -10,17 +10,14 @@ WORKDIR /app
 # Copia los archivos package.json y package-lock.json
 COPY package*.json ./
 
-# Instala las dependencias de Node.js
-RUN npm ci
+# Instala las dependencias de Node.js (usando npm install para instalar devDependencies)
+RUN npm install --production=false
 
 # Copia el código fuente del frontend
 COPY . .
 
-RUN ls -l /app
-RUN ls -l /app/src
-
 # Construye el proyecto para producción
-RUN sh -c "npm run build"
+RUN npm run build
 
 # Usa una imagen base de Nginx para servir el contenido estático
 FROM nginx:alpine
@@ -31,6 +28,7 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Expone el puerto donde corre el frontend
 EXPOSE 80
 
+# Configura Nginx con el archivo nginx.conf
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Ejecuta Nginx
