--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "numero-a-letras": "^1.0.6",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.16.0",
+    "exceljs": "^4.3.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
